deploy/base/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slack-stockbots
  namespace: tzuhao-project1-main
spec:
  terminationGracePeriodSeconds: 30
  containers:
    - name: slack-stockbots
      image: aha86tw/slack-stockbots:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
          name: stockbots-svc
