deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-stockbots
  namespace: tzuhao-project1-main
spec:
  ports:
    - name: stockbots-svc
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: stockbots
  type: ClusterIP
